# Mobile_Store

./: build_script.py  deploy.py  main.py  main_pyqt6.py  pyproject.toml  replit.md  run_pyqt6.py
attached_assets/: Pasted-You-are-an-expert-Python-desktop-application-developer-Update-the-existing-Python-program-to-have--1755205839089_1755205839090.txt  Pasted-You-are-an-expert-Python-desktop-application-developer-and-UI-UX-designer-for-Windows-software-I-1755206767359_1755206767360.txt  Pasted-You-are-an-expert-UI-UX-designer-specialized-in-Windows-desktop-applications-Your-task-is-to-creat-1755203702095_1755203702096.txt
src/database/: db_manager.py
src/ui/: main_window.py  notifications.py  sidebar.py  theme_manager.py
src/ui/dialogs/: customer_dialog.py  product_dialog.py
src/ui/modules/: base_module.py  customers.py  products.py  reports.py  services.py  settings.py  suppliers.py
src/ui/widgets/: charts.py  data_table.py
src/utils/: settings_manager.py
ui/: arabic_data.py  main_window.py  rtl_manager.py  sidebar.py  themes.py  widgets.py
ui/modules/: customers.py  products.py  reports.py  services.py  settings.py  suppliers.py
